# MailingService-API

./: .env_sample  .gitignore  README.md  admin_data.json  blog_data.json  pyproject.toml  requirements.txt
blog/: models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: blog_detail.html  blog_list.html
config/: settings.py  urls.py
customers/: admin.py  forms.py  models.py  views.py
customers/migrations/: 0001_initial.py  0002_alter_customer_owner.py  0003_alter_customer_owner.py
customers/templates/customers/: customer_confirm_delete.html  customer_form.html  customer_list.html
mailings/: admin.py  forms.py  models.py  urls.py  views.py
mailings/mailings_service/: __init__.py  cron_functions.py  send_mail.py  send_mail_and_log.py  send_mailing.py
mailings/migrations/: 0001_initial.py
mailings/templates/mailings/: mailing_detail.html  mailing_list.html
main/: urls.py  views.py
main/templates/main/: base.html  index.html
users/: forms.py  models.py  urls.py  views.py
users/management/commands/: create_custom_superuser.py
users/migrations/: 0001_initial.py
users/service_users/: generate_new_user_pass.py  send_emails.py
users/templates/users/: email_sending_failed.html  email_verified.html  profile.html  user_form.html  verification_failed.html  verification_link_sent.html
